Fixed all opq-ao -> OPQHub in app directory. #89

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,5 +1,5 @@
 @*
-This file is part of opq-ao.
+This file is part of OPQHub.
 
 opa-ao is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -12,7 +12,7 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
-along with opq-ao. If not, see <http://www.gnu.org/licenses/>.
+along with OPQHub. If not, see <http://www.gnu.org/licenses/>.
 
 Copyright 2013 Anthony Christe
 *@
@@ -28,7 +28,7 @@ Copyright 2013 Anthony Christe
     <div class="row">
       <div class="span5 well well-small centered" id="login-form">
         <h3>
-          Login to opq-ao
+          Login to OPQHub
         </h3>
         @if(loginForm.hasGlobalErrors) {
           <p class="error">
