--- a/app/views/signup.scala.html
+++ b/app/views/signup.scala.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="span5">
-    @form(routes.Person.save(), 'class -> "form-horizontal well well-small", 'name -> "userAdminForm") {
+    @form(routes.Person.save(), 'class -> "form-horizontal well well-small", 'name -> "userAdminForm", 'id -> "userAdminForm") {
       <b>User Information</b>
       <br />
       @inputText(
@@ -33,6 +33,13 @@
       @inputText(personForm("lastName"), '_label -> "Last Name", 'placeholder -> "Doe", 'id -> "lastName")
       @inputText(personForm("email"), '_label -> "E-Mail", 'placeholder -> "john.doe@email.com", 'id -> "email")
       @inputPassword(personForm("password"), '_label -> "Password", 'placeholder -> "Password", 'id -> "password")
+      <div class="control-group ">
+  	<label class="control-label" for="password_again">Confirm Password</label>
+  	<div class="controls">
+    		<input type="password" id="password_again" name="password_again" placeholder="Password">
+  	</div>
+	  	<span class="help-inline"></span>
+      </div>
       <hr />
 
       <b>Alert Information</b>
@@ -54,4 +61,25 @@
     </div>
 
   </div>
+<script src="http://jqueryvalidation.org/files/dist/jquery.validate.min.js"></script>
+<script src="http://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
+<script type="text/javascript">
+	jQuery.validator.setDefaults({
+debug: true,
+success: "valid"
+});
+$( "#userAdminForm" ).validate({
+rules: {
+password: "required",
+password_again: {
+equalTo: "#password"
 }
+}
+});
+</script>
+}
+
+
+
+
+
