Removed ITIC plot from div.

--- a/app/views/publicmap.scala.html
+++ b/app/views/publicmap.scala.html
@@ -85,7 +85,7 @@
             <br/>
             <br/>
 
-            <div id="itic-plot" class="plot"></div>
+            <!--<div id="itic-plot" class="plot"></div>-->
             <br/>
             <br/>
           </div>
