--- a/app/views/publicmap.scala.html
+++ b/app/views/publicmap.scala.html
@@ -21,7 +21,7 @@
       <!-- Site specific details -->
     <script src="@routes.Assets.at("dev/js/grid-map.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("dev/js/itic-plotter.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("dev/js/site.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("dev/js/public-map.js")" type="text/javascript"></script>
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("dev/css/site.css")">
 
@@ -245,7 +245,7 @@
     </div>
     <script type="text/javascript">
     $(document).ready(function () {
-    g.invalidateSize();
+      gridMap.invalidateSize();
     });
     </script>
   </body>
