--- a/app/views/publicmap.scala.html
+++ b/app/views/publicmap.scala.html
@@ -81,7 +81,7 @@
               </div>
             </div>
 
-            <div id="waveform" class="plot"></div>
+            @*<div id="waveform" class="plot"></div>*@
             <br/>
             <br/>
 
@@ -129,10 +129,10 @@
       <!-- Main content -->
     <div class="container" id="main-content">
       <div class="row">
-        <div class="col-md-7" id="public-map"></div>
+        <div class="col-md-5" id="public-map"></div>
 
           <!-- Inspector -->
-        <div class="col-md-5" id="inspector">
+        <div class="col-md-7" id="inspector">
 
             <!-- Event Ticker -->
           <div class="row">
@@ -143,14 +143,29 @@
               <div class="panel-body" id="ticker-table">
                 <table class="table table-hover" id="ticker">
                   <thead>
-                    <th>Timestamp</th>
-                    <th>Type</th>
-                    <th>ITIC Severity</th>
+                    <tr>
+                      <th>Timestamp</th>
+                      <th>Type</th>
+                      <th>Duration</th>
+                      <th>Value</th>
+                      <th>ITIC Severity</th>
+                    </tr>
                   </thead>
                   <tbody>
-
-              </tbody>
+                  </tbody>
                 </table>
+              </div>
+            </div>
+          </div>
+
+            <!-- Event Details -->
+          <div class="row">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Event Details</h3>
+              </div>
+              <div class="panel-body">
+                <div id="waveform" class="plot"></div>
               </div>
             </div>
           </div>
@@ -240,6 +255,9 @@
               </div>
             </div>
           </div>
+
+
+
         </div>
       </div>
     </div>
