--- a/public/dev/css/site.css
+++ b/public/dev/css/site.css
@@ -10,6 +10,10 @@ body {
   fieldset { display: table-cell; }
 }
 
+#login-dropdown {
+    margin-top: 10px;
+}
+
 #public-map {
   /*padding-left: 30px;*/
   width: 100%;
