Fixed issue #103 with min/max frequency voltage.

--- a/app/views/publicmap.scala.html
+++ b/app/views/publicmap.scala.html
@@ -109,13 +109,13 @@
                   <div class="col-xs-1">
                     <input type="checkbox" id="requestFrequency" checked="checked">
                   </div>
-                  <label class="col-sm-1">40</label>
+                  <label class="col-sm-1" id="min-frequency">40</label>
                   <div class="col-sm-6">
                     <input id="frequency-slider" type="text" class="span2" value=""
                     data-slider-min="40" data-slider-max="80" data-slider-step="1"
                     data-slider-value="[40,80]"/>
                   </div>
-                  <label class="col-sm-1">80</label>
+                  <label class="col-sm-1" id="max-frequency">80</label>
                 </div>
 
                   <!-- Voltage filter -->
@@ -124,13 +124,13 @@
                   <div class="col-xs-1">
                     <input type="checkbox" id="requestVoltage" checked="checked">
                   </div>
-                  <label class="col-sm-1">90</label>
+                  <label class="col-sm-1" id="min-voltage">90</label>
                   <div class="col-sm-6">
                     <input id="voltage-slider" type="text" class="span2" value=""
                     data-slider-min="90" data-slider-max="150" data-slider-step="1"
                     data-slider-value="[90,150]"/>
                   </div>
-                  <label class="col-sm-1">150</label>
+                  <label class="col-sm-1" id="max-voltage">150</label>
                 </div>
 
                   <!-- Duration filter -->
