--- a/app/views/publicmap.scala.html
+++ b/app/views/publicmap.scala.html
@@ -30,61 +30,7 @@
   </head>
   <body>
       <!-- Responsive navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <!--  Display three horizontal lines when navbar collapsed. -->
-            <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand">OPQHub</a>
-        </div>
-
-          <!-- Drop down login -->
-        <div class="dropdown pull-right" id="login-dropdown">
-          <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
-            Login
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-            <form class="form-horizontal" role="form">
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                <div class="col-sm-10">
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox"> Remember me
-                    </label>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <button type="submit" class="btn btn-default">Sign in</button>
-                </div>
-              </div>
-            </form>
-          </ul>
-        </div>
-        @*<div class="collapse navbar-collapse">*@
-        @*<div class="nav pull-right">*@
-        @*<a href="@routes.Application.login()" class="btn btn-link">Login</a>*@
-        @*<a href="/signup" class="btn btn-link">Sign-Up</a>*@
-        @*</div>*@
-        @*</div>*@
-      </div>
-    </div>
+    @navbar()
 
       <!-- Main content -->
     <div class="container" id="main-content">
