Working drop-down login with link button to signup page and modular public navbar #98

--- a/app/views/newsignup.scala.html
+++ b/app/views/newsignup.scala.html
@@ -20,7 +20,7 @@
 
   </head>
   <body>
-   @navbar()
+   @publicnavbar()
       <!-- Main content -->
     <div class="container" id="main-content">
       <div class="row">
