--- a/app/views/publicmap.scala.html
+++ b/app/views/publicmap.scala.html
@@ -10,6 +10,8 @@
     <script src="@routes.Assets.at("dev/contrib/js/moment.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("dev/contrib/js/bootstrap.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("dev/contrib/js/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("dev/contrib/js/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
+
     <script src="@routes.Assets.at("dev/contrib/js/bootstrap-slider.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("dev/contrib/js/leaflet.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("dev/contrib/js/jquery.flot.js")" type="text/javascript"></script>
@@ -30,7 +32,7 @@
   </head>
   <body>
       <!-- Responsive navbar -->
-    @navbar()
+    @publicnavbar()
 
       <!-- Main content -->
     <div class="container" id="main-content">
