Different navbars are displayed depending on if user is logged in or not. #98

--- a/app/views/newsignup.scala.html
+++ b/app/views/newsignup.scala.html
@@ -20,7 +20,7 @@
 
   </head>
   <body>
-   @publicnavbar()
+   @navbar()
       <!-- Main content -->
     <div class="container" id="main-content">
       <div class="row">
