--- a/app/views/publicmap.scala.html
+++ b/app/views/publicmap.scala.html
@@ -32,7 +32,7 @@
   </head>
   <body>
       <!-- Responsive navbar -->
-    @publicnavbar()
+    @navbar()
 
       <!-- Main content -->
     <div class="container" id="main-content">
