--- a/public/dev/css/site.css
+++ b/public/dev/css/site.css
@@ -2,6 +2,13 @@ body {
   padding-top: 70px;
 }
 
+.success {
+    text-align: center;
+    font-weight: bold;
+    color: green;
+}
+
+
 .panel-title {
   text-align: center;
 }
