--- a/app/views/admin/deviceconfig.scala.html
+++ b/app/views/admin/deviceconfig.scala.html
@@ -56,7 +56,7 @@ Copyright 2014 Anthony Christe
               <input type="hidden" id="northEastLatitude" name="northEastLatitude" value="@location.getNorthEastLatitude().toString()" />
               <input type="hidden" id="northEastLongitude" name="northEastLongitude" value="@location.getNorthEastLongitude().toString()" />
               <input type="hidden" id="southWestLatitude" name="southWestLatitude" value="@location.getSouthWestLatitude().toString()" />
-              <input type="hidden" id="southWestLongitude" name="southWestLongitude" value="@location.getSouthWestLongitude()z.toString()" />
+              <input type="hidden" id="southWestLongitude" name="southWestLongitude" value="@location.getSouthWestLongitude().toString()" />
               <input type="hidden" id="gridScale" name="gridScale" value="@location.getGridScale().toString()" />
               <input type="hidden" id="gridRow" name="gridRow" value="@location.getGridRow().toString()" />
               <input type="hidden" id="gridCol" name="gridCol" value="@location.getGridCol().toString()" />
