Removed location information from device admin since the layout is dynamic and can change positions based on device. #121

--- a/app/views/deviceadmin.scala.html
+++ b/app/views/deviceadmin.scala.html
@@ -26,10 +26,10 @@
       <div class="col-lg-4 well">
         <b>OPQBoxes</b>
         <p>This page allows for the management of OPQBoxes.</p>
-        <p>OPQBoxes already registered with your account will show up in the list to the right.</p>
+        <p>OPQBoxes already registered with your account will show up as a list on this page.</p>
         <p>Each row displays basic facts about your registered OPQBoxes.</p>
         <p>The last row allows you to register one or more OPQBoxes.</p>
-        <p>To update an existing box, select the "Configure OPQBox" button beside the OPQBox you would like to configured.</p>
+        <p>To update an existing box, select the "Configure OPQBox" button beside the OPQBox you would like to configure.</p>
       </div>
 
       <!-- List of opq boxes -->
