--- a/app/views/privatenavbar.scala.html
+++ b/app/views/privatenavbar.scala.html
@@ -18,7 +18,7 @@
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-menu">
-        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Administration.user()"><span class="glyphicon glyphicon-user"></span> Account</a></li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Administration.user(session.get("email"))"><span class="glyphicon glyphicon-user"></span> Account</a></li>
         <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Administration.device()"><span class="glyphicon glyphicon-hdd"></span> OPQBoxes</a></li>
         <li role="presentation" class="divider"></li>
         <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.index()"><span class="glyphicon glyphicon-eye-open"></span> Public Analysis</a></li>
@@ -29,4 +29,3 @@
     </div>
   </div>
 </div>
-
