--- a/app/views/privatenavbar.scala.html
+++ b/app/views/privatenavbar.scala.html
@@ -24,7 +24,7 @@
         <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.index()"><span class="glyphicon glyphicon-eye-open"></span> Public Analysis</a></li>
         <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Events.eventsByPage(0, 0)"><span class="glyphicon glyphicon-eye-close"></span> User Analysis</a></li>
         <li role="presentation" class="divider"></li>
-        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.logout()"><span class="glyphicon glyphicon-off"></span> Log Out</a></li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.Application.logout(session.get("email"))"><span class="glyphicon glyphicon-off"></span> Log Out</a></li>
       </ul>
     </div>
   </div>
